prevent layout shift on gallery on first load

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
 @layer base {
   body {
     @apply bg-purple-75;
+    @apply overflow-y-scroll;
   }
 
   html,
